@@ -3,7 +3,7 @@
 #
 # Generated by: Axel B. Andersen
 #
-# Generated on: 12/6/2018
+# Generated on: 12/8/2018
 #
 
 @{
@@ -12,7 +12,7 @@
 RootModule = 'AxAzureBlueprint.psm1'
 
 # Version number of this module.
-ModuleVersion = '1.0.2'
+ModuleVersion = '1.1.0'
 
 # Supported PSEditions
 # CompatiblePSEditions = @()
@@ -70,8 +70,9 @@ Description = 'This module contains cmdlets used for maintaining Azure Blueprint
 
 # Functions to export from this module, for best performance, do not use wildcards and do not delete the entry, use an empty array if there are no functions to export.
 FunctionsToExport = 'Connect-AzureBlueprint', 'Get-AzureBlueprint', 
-               'Get-AzureBlueprintArtifact', 'Import-AzureBlueprintArtifact', 
-               'Remove-AzureBlueprint', 'Set-AzureBlueprint'
+               'Get-AzureBlueprintArtifact', 'Get-AzureBlueprintImportParameters', 
+               'Import-AzureBlueprintArtifact', 'Remove-AzureBlueprint', 
+               'Set-AzureBlueprint'
 
 # Cmdlets to export from this module, for best performance, do not use wildcards and do not delete the entry, use an empty array if there are no cmdlets to export.
 CmdletsToExport = @()
