@@ -547,6 +547,125 @@
   </command:command>
   <command:command xmlns:maml="http://schemas.microsoft.com/maml/2004/10" xmlns:command="http://schemas.microsoft.com/maml/dev/command/2004/10" xmlns:dev="http://schemas.microsoft.com/maml/dev/2004/10" xmlns:MSHelp="http://msdn.microsoft.com/mshelp">
     <command:details>
+      <command:name>Get-AzureBlueprintImportParameters</command:name>
+      <command:verb>Get</command:verb>
+      <command:noun>AzureBlueprintImportParameters</command:noun>
+      <maml:description>
+        <maml:para>Prepares parameters for the Import-AzureBlueprintArtifact</maml:para>
+      </maml:description>
+    </command:details>
+    <maml:description>
+      <maml:para>This Cmdlet prepares imput objects for the Import-AzureBlueprintArtifact. It takes host input for REsource Groups names and optionally artifact names and creates objects that can be piped to the Import-AzureBlueprintArtifact cmdlet</maml:para>
+    </maml:description>
+    <command:syntax>
+      <command:syntaxItem>
+        <maml:name>Get-AzureBlueprintImportParameters</maml:name>
+        <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="0" aliases="none">
+          <maml:name>ARMTemplateDirectory</maml:name>
+          <maml:Description>
+            <maml:para>Location of the ARM templates to import</maml:para>
+          </maml:Description>
+          <command:parameterValue required="true" variableLength="false">DirectoryInfo</command:parameterValue>
+          <dev:type>
+            <maml:name>DirectoryInfo</maml:name>
+            <maml:uri />
+          </dev:type>
+          <dev:defaultValue>None</dev:defaultValue>
+        </command:parameter>
+        <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
+          <maml:name>UseFilenameAsArtifactname</maml:name>
+          <maml:Description>
+            <maml:para>Switch that allows the filename to become the artifact name. If omitted, artifact name has to be supplied for each ARM template file</maml:para>
+          </maml:Description>
+          <dev:type>
+            <maml:name>SwitchParameter</maml:name>
+            <maml:uri />
+          </dev:type>
+          <dev:defaultValue>False</dev:defaultValue>
+        </command:parameter>
+      </command:syntaxItem>
+    </command:syntax>
+    <command:parameters>
+      <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="0" aliases="none">
+        <maml:name>ARMTemplateDirectory</maml:name>
+        <maml:Description>
+          <maml:para>Location of the ARM templates to import</maml:para>
+        </maml:Description>
+        <command:parameterValue required="true" variableLength="false">DirectoryInfo</command:parameterValue>
+        <dev:type>
+          <maml:name>DirectoryInfo</maml:name>
+          <maml:uri />
+        </dev:type>
+        <dev:defaultValue>None</dev:defaultValue>
+      </command:parameter>
+      <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
+        <maml:name>UseFilenameAsArtifactname</maml:name>
+        <maml:Description>
+          <maml:para>Switch that allows the filename to become the artifact name. If omitted, artifact name has to be supplied for each ARM template file</maml:para>
+        </maml:Description>
+        <command:parameterValue required="false" variableLength="false">SwitchParameter</command:parameterValue>
+        <dev:type>
+          <maml:name>SwitchParameter</maml:name>
+          <maml:uri />
+        </dev:type>
+        <dev:defaultValue>False</dev:defaultValue>
+      </command:parameter>
+    </command:parameters>
+    <command:inputTypes>
+      <command:inputType>
+        <dev:type>
+          <maml:name>None</maml:name>
+        </dev:type>
+        <maml:description>
+          <maml:para></maml:para>
+        </maml:description>
+      </command:inputType>
+    </command:inputTypes>
+    <command:returnValues>
+      <command:returnValue>
+        <dev:type>
+          <maml:name>System.Object</maml:name>
+        </dev:type>
+        <maml:description>
+          <maml:para></maml:para>
+        </maml:description>
+      </command:returnValue>
+    </command:returnValues>
+    <maml:alertSet>
+      <maml:alert>
+        <maml:para></maml:para>
+      </maml:alert>
+    </maml:alertSet>
+    <command:examples>
+      <command:example>
+        <maml:title>-------------------------- Example 1 --------------------------</maml:title>
+        <dev:code>PS C:\&gt; $props = Get-AzureBlueprintImportParameters -ARMTemplateDirectory C:\dev\ARMTemplates\
+
+ArtifactName for batchwithstorage.json: bst
+Resource Group name for batchwithstorage.json: rg1
+ArtifactName for NoMeta.json: nom
+Resource Group name for NoMeta.json: rg2
+
+$Props | Import-AzureBlueprintArtifact -TargetDirectory C:\dev\MyNewMultiRGBlueprint</dev:code>
+        <dev:remarks>
+          <maml:para>first store the parameters in the $props variable and the pipe the parameters to the Import-AzureBlueprintArtifact. In this example the ArtifactName can be changed.</maml:para>
+        </dev:remarks>
+      </command:example>
+      <command:example>
+        <maml:title>-------------------------- Example 1 --------------------------</maml:title>
+        <dev:code>PS C:\&gt; Get-AzureBlueprintImportParameters -ARMTemplateDirectory C:\dev\ARMTemplates\ -UseFilenameAsArtifactname | Import-AzureBlueprintArtifact -TargetDirectory C:\dev\MyNewMultiRGBlueprint
+
+Resource Group name for batchwithstorage.json: rg1
+Resource Group name for NoMeta.json: rg2</dev:code>
+        <dev:remarks>
+          <maml:para>Here the parameters are created with the UseFilenameAsArtifactname switch. Filenames are used for the Artifact name. Furthermore the result is piped directly to the Import-AzureBlueprintArtifact cmdlet only adding the TargetDirectory path</maml:para>
+        </dev:remarks>
+      </command:example>
+    </command:examples>
+    <command:relatedLinks />
+  </command:command>
+  <command:command xmlns:maml="http://schemas.microsoft.com/maml/2004/10" xmlns:command="http://schemas.microsoft.com/maml/dev/command/2004/10" xmlns:dev="http://schemas.microsoft.com/maml/dev/2004/10" xmlns:MSHelp="http://msdn.microsoft.com/mshelp">
+    <command:details>
       <command:name>Get-Header</command:name>
       <command:verb>Get</command:verb>
       <command:noun>Header</command:noun>
@@ -769,7 +888,7 @@
           </dev:type>
           <dev:defaultValue>None</dev:defaultValue>
         </command:parameter>
-        <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
+        <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="True (ByPropertyName)" position="named" aliases="none">
           <maml:name>ARMTemplateJson</maml:name>
           <maml:Description>
             <maml:para>The path to the ARM template to transform</maml:para>
@@ -781,7 +900,7 @@
           </dev:type>
           <dev:defaultValue>None</dev:defaultValue>
         </command:parameter>
-        <command:parameter required="true" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
+        <command:parameter required="true" variableLength="true" globbing="false" pipelineInput="True (ByPropertyName)" position="named" aliases="none">
           <maml:name>ArtifactName</maml:name>
           <maml:Description>
             <maml:para>Name of the Artifact and the name of the artifactfile</maml:para>
@@ -793,7 +912,7 @@
           </dev:type>
           <dev:defaultValue>None</dev:defaultValue>
         </command:parameter>
-        <command:parameter required="true" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
+        <command:parameter required="true" variableLength="true" globbing="false" pipelineInput="True (ByPropertyName)" position="named" aliases="none">
           <maml:name>ResourceGroup</maml:name>
           <maml:Description>
             <maml:para>Name of the Resource Group in the Blueprint</maml:para>
@@ -801,6 +920,57 @@
           <command:parameterValue required="true" variableLength="false">String</command:parameterValue>
           <dev:type>
             <maml:name>String</maml:name>
+            <maml:uri />
+          </dev:type>
+          <dev:defaultValue>None</dev:defaultValue>
+        </command:parameter>
+      </command:syntaxItem>
+      <command:syntaxItem>
+        <maml:name>Import-AzureBlueprintArtifact</maml:name>
+        <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
+          <maml:name>NewBlueprintName</maml:name>
+          <maml:Description>
+            <maml:para>Name of the blueprint.json file - blueprint is default</maml:para>
+          </maml:Description>
+          <command:parameterValue required="true" variableLength="false">String</command:parameterValue>
+          <dev:type>
+            <maml:name>String</maml:name>
+            <maml:uri />
+          </dev:type>
+          <dev:defaultValue>None</dev:defaultValue>
+        </command:parameter>
+        <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
+          <maml:name>TargetDirectory</maml:name>
+          <maml:Description>
+            <maml:para>The target directory for the blueprint and artifact files</maml:para>
+          </maml:Description>
+          <command:parameterValue required="true" variableLength="false">DirectoryInfo</command:parameterValue>
+          <dev:type>
+            <maml:name>DirectoryInfo</maml:name>
+            <maml:uri />
+          </dev:type>
+          <dev:defaultValue>None</dev:defaultValue>
+        </command:parameter>
+        <command:parameter required="true" variableLength="true" globbing="false" pipelineInput="True (ByPropertyName)" position="named" aliases="none">
+          <maml:name>ResourceGroup</maml:name>
+          <maml:Description>
+            <maml:para>Name of the Resource Group in the Blueprint</maml:para>
+          </maml:Description>
+          <command:parameterValue required="true" variableLength="false">String</command:parameterValue>
+          <dev:type>
+            <maml:name>String</maml:name>
+            <maml:uri />
+          </dev:type>
+          <dev:defaultValue>None</dev:defaultValue>
+        </command:parameter>
+        <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
+          <maml:name>ARMTemplateDirectory</maml:name>
+          <maml:Description>
+            <maml:para>Imports all ARM templates of the directory to one single Resource Group</maml:para>
+          </maml:Description>
+          <command:parameterValue required="true" variableLength="false">DirectoryInfo</command:parameterValue>
+          <dev:type>
+            <maml:name>DirectoryInfo</maml:name>
             <maml:uri />
           </dev:type>
           <dev:defaultValue>None</dev:defaultValue>
@@ -832,7 +1002,7 @@
         </dev:type>
         <dev:defaultValue>None</dev:defaultValue>
       </command:parameter>
-      <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
+      <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="True (ByPropertyName)" position="named" aliases="none">
         <maml:name>ARMTemplateJson</maml:name>
         <maml:Description>
           <maml:para>The path to the ARM template to transform</maml:para>
@@ -844,7 +1014,7 @@
         </dev:type>
         <dev:defaultValue>None</dev:defaultValue>
       </command:parameter>
-      <command:parameter required="true" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
+      <command:parameter required="true" variableLength="true" globbing="false" pipelineInput="True (ByPropertyName)" position="named" aliases="none">
         <maml:name>ArtifactName</maml:name>
         <maml:Description>
           <maml:para>Name of the Artifact and the name of the artifactfile</maml:para>
@@ -856,7 +1026,7 @@
         </dev:type>
         <dev:defaultValue>None</dev:defaultValue>
       </command:parameter>
-      <command:parameter required="true" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
+      <command:parameter required="true" variableLength="true" globbing="false" pipelineInput="True (ByPropertyName)" position="named" aliases="none">
         <maml:name>ResourceGroup</maml:name>
         <maml:Description>
           <maml:para>Name of the Resource Group in the Blueprint</maml:para>
@@ -864,6 +1034,18 @@
         <command:parameterValue required="true" variableLength="false">String</command:parameterValue>
         <dev:type>
           <maml:name>String</maml:name>
+          <maml:uri />
+        </dev:type>
+        <dev:defaultValue>None</dev:defaultValue>
+      </command:parameter>
+      <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
+        <maml:name>ARMTemplateDirectory</maml:name>
+        <maml:Description>
+          <maml:para>Imports all ARM templates of the directory to one single Resource Group</maml:para>
+        </maml:Description>
+        <command:parameterValue required="true" variableLength="false">DirectoryInfo</command:parameterValue>
+        <dev:type>
+          <maml:name>DirectoryInfo</maml:name>
           <maml:uri />
         </dev:type>
         <dev:defaultValue>None</dev:defaultValue>
@@ -901,6 +1083,13 @@
         <dev:remarks>
           <maml:para>Creates 2 files in the C:\Dev\NewBlueprint\ folder: blueprint.json HUBNet.json</maml:para>
           <maml:para>The blueprint.json file will hold the Network resource group and all the parameters needed to deploy the HUBNet.json template. The HUBNet.json template will contain the original ARM template, but only with the stub-parameters and a parameter section referencing the Blueprint parameters.</maml:para>
+        </dev:remarks>
+      </command:example>
+      <command:example>
+        <maml:title>-------------------------- Example 2 --------------------------</maml:title>
+        <dev:code>PS C:\&gt; Import-AzureBlueprintArtifact -ARMTemplateDirectory C:\Dev\ARMTemplates -ResourceGroup MyRG -TargetDirectory C:\dev\MultipleTemplates\</dev:code>
+        <dev:remarks>
+          <maml:para>Imports all ARM templates from C:\Dev\ARMTemplates and creates a blueprint in C:\dev\MultipleTemplates\ with all the artifacts in Resource Group MyRG</maml:para>
         </dev:remarks>
       </command:example>
     </command:examples>
